--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pdf2image>=1.16.3
 # HTTP and utilities
 requests>=2.31.0
 aiofiles>=23.2.1
+aiohttp>=3.9.0
 python-dotenv>=1.0.0
 
 # Monitoring and logging
