--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ PORT=8000
 DEBUG=False
 
 # Model Configuration
-MODEL_NAME=surajp/trocr-base-hindi
+# Options: microsoft/trocr-base-printed (faster) or microsoft/trocr-large-printed (more accurate)
+MODEL_NAME=microsoft/trocr-base-printed
 MODEL_CACHE_DIR=./model_cache
 
 # Image Processing
