Refactor to use Hugging Face Inference API - No local model, lightweight deployment

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=False
 
-# Model Configuration
-# Options: microsoft/trocr-base-printed (faster) or microsoft/trocr-large-printed (more accurate)
-MODEL_NAME=microsoft/trocr-base-printed
-MODEL_CACHE_DIR=./model_cache
+# Hugging Face API Configuration
+# Get your API key from: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=
+HUGGINGFACE_MODEL=microsoft/trocr-base-printed
 
 # Image Processing
 MAX_IMAGE_SIZE=10485760  # 10MB in bytes
@@ -17,4 +17,4 @@ MAX_IMAGE_DIMENSION=2048
 
 # Request Configuration
 REQUEST_TIMEOUT=60
-MODEL_TIMEOUT=30
+API_TIMEOUT=30
