--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ requests>=2.31.0
 aiohttp>=3.9.0
 httpx>=0.25.0
 python-dotenv>=1.0.0
+huggingface-hub>=0.20.0
 
 # Monitoring and logging
 pydantic>=2.5.0
